# Understanding-containers

./: .gitignore  CMakeLists.txt  README.md  azure-pipelines.yml  config.h
buil/: CMakeCache.txt  Makefile  MyDocker  cmake_install.cmake
cmake/: FindSeccomp.cmake
root_fs/etc/: ld.so.cache  resolv.conf
root_fs/root/: .bash_history
root_fs/sbin/: hwclock  ipmaddr  iptunnel  nameif  route  slattach
root_fs/usr/lib/python3.6/: _sysconfigdata_m_linux_x86_64-linux-gnu.py
root_fs/usr/sbin/: arp
root_fs/var/cache/ldconfig/: aux-cache
root_fs/var/lib/apt/: extended_states
root_fs/var/lib/apt/lists/: archive.ubuntu.com_ubuntu_dists_bionic-backports_InRelease  archive.ubuntu.com_ubuntu_dists_bionic-backports_main_binary-amd64_Packages.lz4  archive.ubuntu.com_ubuntu_dists_bionic-backports_universe_binary-amd64_Packages.lz4  archive.ubuntu.com_ubuntu_dists_bionic-updates_InRelease  archive.ubuntu.com_ubuntu_dists_bionic-updates_main_binary-amd64_Packages.lz4  archive.ubuntu.com_ubuntu_dists_bionic-updates_multiverse_binary-amd64_Packages.lz4  archive.ubuntu.com_ubuntu_dists_bionic-updates_restricted_binary-amd64_Packages.lz4  archive.ubuntu.com_ubuntu_dists_bionic-updates_universe_binary-amd64_Packages.lz4  security.ubuntu.com_ubuntu_dists_bionic-security_InRelease  security.ubuntu.com_ubuntu_dists_bionic-security_main_binary-amd64_Packages.lz4  security.ubuntu.com_ubuntu_dists_bionic-security_multiverse_binary-amd64_Packages.lz4  security.ubuntu.com_ubuntu_dists_bionic-security_restricted_binary-amd64_Packages.lz4  security.ubuntu.com_ubuntu_dists_bionic-security_universe_binary-amd64_Packages.lz4
root_fs/var/lib/dpkg/: diversions  diversions-old  status  status-old
root_fs/var/lib/dpkg/info/: base-files.md5sums  bsdutils.md5sums  libpython3.6-minimal:amd64.md5sums  libpython3.6-stdlib:amd64.md5sums  libpython3.6:amd64.md5sums  libsqlite3-0:amd64.symbols  libstdc++6:amd64.md5sums  libsystemd0:amd64.md5sums  xxd.md5sums
root_fs/var/lib/dpkg/triggers/: File
root_fs/var/log/: btmp
root_fs/var/log/apt/: eipp.log.xz
rootfs/root/: .bash_history
rootfs/run/systemd/sessions/: c1
rootfs/run/systemd/users/: 121
rootfs/test-escape/: escape
rootfs/test-escape/out_bash/lib/x86_64-linux-gnu/: libsystemd.so.0
rootfs/var/cache/ldconfig/: aux-cache
rootfs/var/lib/dpkg/info/: libgcc1:amd64.md5sums  libsmartcols1:amd64.md5sums  mount.md5sums
rootfs/var/log/cups/: error_log
src/: .main.c.swp  .runc.c.swp  helpers.c  helpers.h  main.c  mount.c  runc.c  runc.h  user.c  user.h
src/capabilities/: capabilities.c  capabilities.h
src/helpers/: .helpers.h.swp  helpers.c  helpers.h
src/namespaces/cgroup/: cgroup.c  cgroup.h
src/namespaces/mount/: .mount.c.swp  mount.c  mount.h
src/namespaces/network/: README.md  network.c  network.h
src/namespaces/user/: user.c  user.h
src/seccomp/: seccomp_config.c  seccomp_config.h
tools/: netsetgo  netsetgo_install.sh  network_configuration_internet.sh  startuptime.c
ubuntu-fs/etc/: ld.so.cache
ubuntu-fs/root/: .bash_history  .viminfo
ubuntu-fs/sbin/: ifconfig  mii-tool  plipconfig  rarp
ubuntu-fs/var/cache/ldconfig/: aux-cache
ubuntu-fs/var/lib/apt/: extended_states
ubuntu-fs/var/lib/apt/lists/: archive.ubuntu.com_ubuntu_dists_bionic-backports_InRelease  archive.ubuntu.com_ubuntu_dists_bionic-backports_main_binary-amd64_Packages.lz4  archive.ubuntu.com_ubuntu_dists_bionic-backports_universe_binary-amd64_Packages.lz4  archive.ubuntu.com_ubuntu_dists_bionic-updates_InRelease  archive.ubuntu.com_ubuntu_dists_bionic-updates_main_binary-amd64_Packages.lz4  security.ubuntu.com_ubuntu_dists_bionic-security_InRelease  (+7 more)
ubuntu-fs/var/lib/dpkg/: status  status-old
ubuntu-fs/var/lib/pam/: seen
ubuntu-fs/var/log/apt/: eipp.log.xz
ubuntufs/etc/: shadow
(+10 files in other folders)
